--- a/package.json
+++ b/package.json
@@ -119,5 +119,8 @@
     "buffer": false,
     "crypto": false,
     "process": false
+  },
+  "dependencies": {
+    "@types/node-forge": "^1.0.0"
   }
 }
